--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -80,7 +80,7 @@
 	      Feo</a> {{ site.time | date:"%Y" }}, licensed
 	    under <a rel="license" class="print-link"
 		     href="http://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA
-	      4.0</a>.</p>
+	      4.0</a>. Based on Luca De Feo's <a href="https://github.com/defeo/class-boilerplate">class boilerplate<a></a></p>
 
 	  <p class="dont-print">Source code available
 	    on <a href="{{ site.github.repository_url }}">GitHub</a>,
