--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -73,14 +73,10 @@
       <footer class="footer">
 	<div class="container">
 	  <p><a rel="license"
-		href="http://creativecommons.org/licenses/by-sa/4.0/">
+		href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
 	      <img alt="Creative Commons Licence" style="border-width:0"
-		   src="http://i.creativecommons.org/l/by-sa/4.0/80x15.png"/>
-	    </a> <a href="http://defeo.lu" class="print-link">Luca De
-	      Feo</a> {{ site.time | date:"%Y" }}, licensed
-	    under <a rel="license" class="print-link"
-		     href="http://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA
-	      4.0</a>. Based on Luca De Feo's <a href="https://github.com/defeo/class-boilerplate">class boilerplate<a></a></p>
+		   src="http://i.creativecommons.org/l/by-nc-sa/4.0/80x15.png"/>
+	    </a> Layout based on Luca De Feo's <a href="https://github.com/defeo/class-boilerplate">class boilerplate<a></a>.</p>
 
 	  <p class="dont-print">Source code available
 	    on <a href="{{ site.github.repository_url }}">GitHub</a>,
