--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -72,18 +72,18 @@
 
       <footer class="footer">
 	<div class="container">
-	  <p><a rel="license"
-		href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
-	      <img alt="Creative Commons Licence" style="border-width:0"
-		   src="http://i.creativecommons.org/l/by-nc-sa/4.0/80x15.png"/>
-	    </a> Layout based on Luca De Feo's <a href="https://github.com/defeo/class-boilerplate">class boilerplate<a></a>.</p>
+    <p><a rel="license"
+    href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
+        <img alt="Creative Commons Licence" style="border-width:0"
+       src="http://i.creativecommons.org/l/by-nc-sa/4.0/80x15.png"/>
+      </a> <a href="http://bpesquet.fr">Baptiste Pesquet</a> {{ site.time | date:"%Y" }}</p>
 
-	  <p class="dont-print">Source code available
-	    on <a href="{{ site.github.repository_url }}">GitHub</a>,
-	    static Website generated
-	    with <a href="http://jekyllrb.com/">Jekyll</a> and kindly
-	    hosted by <a href="http://pages.github.com/">GitHub</a>.</p>
-	</div>
+    <p class="dont-print">Source code available
+      on <a href="{{ site.github.repository_url }}">GitHub</a>,
+      static Website generated
+      with <a href="http://jekyllrb.com/">Jekyll</a> and kindly
+      hosted by <a href="http://pages.github.com/">GitHub</a>. Original layout from [Luca De Feo](https://github.com/defeo/class-boilerplate).</p>
+  </div>
       </footer>
     </div>
 
