--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -82,7 +82,7 @@
       on <a href="{{ site.github.repository_url }}">GitHub</a>,
       static Website generated
       with <a href="http://jekyllrb.com/">Jekyll</a> and kindly
-      hosted by <a href="http://pages.github.com/">GitHub</a>. Original layout from [Luca De Feo](https://github.com/defeo/class-boilerplate).</p>
+      hosted by <a href="http://pages.github.com/">GitHub</a>. Original layout by <a href="http://defeo.lu">Luca De Feo</a>.</p>
   </div>
       </footer>
     </div>
