--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,6 @@ layout: main
       on <a href="{{ site.github.repository_url }}">GitHub</a>,
       static website generated
       with <a href="http://jekyllrb.com/">Jekyll</a> and kindly
-      hosted by <a href="http://pages.github.com/">GitHub</a>.</p>
+      hosted by <a href="http://pages.github.com/">GitHub</a>. <a href="https://github.com/defeo/class-boilerplate">Course template</a> created by <a href="http://defeo.lu">Luca De Feo</a>. </p>
   </div>
 </footer>
